MMT-2000 addressing a button spacing issue from PR

--- a/app/assets/stylesheets/components/_metadata-preview.scss
+++ b/app/assets/stylesheets/components/_metadata-preview.scss
@@ -358,3 +358,7 @@ ul.sub-field {
 .proposal-status-display-status {
   text-decoration: underline;
 }
+
+.proposal-reject-button {
+  margin-right: .625em
+}
